# krovli-kursach

./: app.py  database.sql  db.yaml  db_pub.yaml  main.py  pyproject.toml  Диаграмма без названия.drawio
static/components/: package-lock.json  package.json
static/css/: img.css  style.css
static/js/: message.js
templates/: _footer.html  _header.html  add_product.html  base.html  edit_brand.html  edit_color.html  edit_coverage.html  edit_product.html  edit_type_of_roofing_material.html  index.html  logcus.html  logemp.html  products.html  regcus.html  regemp.html  results.html  results_customer.html  sel_prod.html
templates/orders/: order_form.html  orders_admin.html  orders_customer.html
