[project]
name = "krovli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [    
 "flask==3.1.2",
 "flask-bootstrap==3.3.7.1",
 "flask-ckeditor==1.0.0",
 "flask-mysqldb==2.0.0",
 "itsdangerous==2.2.0",
 "jinja2==3.1.6",
 "markupsafe==3.0.3",
 "mysqlclient==2.2.7",
 "pyyaml==6.0.3",
 "visitor==0.1.3",
 "werkzeug==3.1.3"
]